@@ -4,10 +4,6 @@
 
 struct linkedlist *linkedlist_new(void){
     struct linkedlist *list = malloc(sizeof(struct linkedlist));
-
-    if(!list)
-        return NULL;
-    
     list->front = NULL;
 
     return list;
@@ -66,7 +62,9 @@ void linkedlist_delete(struct linkedlist *list, void *data_to_remove){
         return;
 
     if(list->front->data == data_to_remove){
+        struct node_t *freenode = list->front;
         list->front = list->front->next;
+        free(freenode);
         return;
     }
 
@@ -82,7 +80,6 @@ void linkedlist_delete(struct linkedlist *list, void *data_to_remove){
              * modify connections to skip this one.
              */
             previous->next = current->next;
-            free(current);
             current = NULL;
             return;
         }
@@ -90,6 +87,9 @@ void linkedlist_delete(struct linkedlist *list, void *data_to_remove){
 }
 
 void linkedlist_free(struct linkedlist *list){
+    free(list->front);
+    list->front = NULL;
+
     free(list);
     list = NULL;
 }
