@@ -1,3 +1,7 @@
+8-19-19
+- fixed concat logic/memory leaks
+- fixed linkedlist logic/memory leaks
+
 7-10-19
 - fix up cmdfunc_kill logic so we don't get stuck in wait4
 
